--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/jewkesy/bespoken-popcorn#readme",
   "dependencies": {
-    "bespoken-tools": "^2.0.22",
-    "chai": "^4.1.2",
-    "dotenv": "^6.0.0",
-    "mocha": "^5.2.0",
-    "tracer": "^0.9.1",
-    "virtual-alexa": "^0.6.6"
+    "dotenv": "^7.0.0",
+    "tracer": "^0.9.8",
+    "virtual-device-sdk": "^1.5.12"
+  },
+  "devDependencies": {
+    "mocha": "^6.1.3",
+    "virtual-alexa": "^0.7.2"
   }
 }
